--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="products.js"></script>
+    <script type="module" src="products.js"></script>
     <!-- SellHub Scripts -->
     <script src="https://js.sellhub.io/v1/sellhub.js"></script>
     <script type="module" src="https://public.sellhub.cx/embeds.js"></script>
