Add index.html 1743151531190

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SkyFall Gaming</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script type="module" src="https://public.sellhub.cx/embeds.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <style>
@@ -134,11 +135,12 @@
         </div>
     </footer>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script type="module" src="products.js"></script>
-    <!-- SellHub Scripts -->
+    <!-- SellHub Scripts (load first) -->
     <script src="https://js.sellhub.io/v1/sellhub.js"></script>
     <script type="module" src="https://public.sellhub.cx/embeds.js"></script>
+    
+    <!-- Other Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script type="module" src="products.js"></script>
 </body>
 </html>
