--- a/index.html
+++ b/index.html
@@ -78,9 +78,48 @@
     </section>
 
     <!-- Main Content -->
-    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
-        <!-- Products will be added here via JavaScript -->
-        <div id="products-container" class="space-y-16"></div>
+    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 text-center">
+        <div class="space-y-4">
+            <button
+                data-sellhub-product="3e77f619-d7e3-4e1a-9954-6fe5e688660a"
+                style="
+                    border-radius: 10px;
+                    background-color: #ffffff;
+                    color: #000000;
+                    padding: 5px 25px;
+                    margin: 10px;
+                "
+            >
+                Buy Variant
+            </button>
+            <button
+                data-sellhub-cart-product="3e77f619-d7e3-4e1a-9954-6fe5e688660a"
+                style="
+                    border-radius: 10px;
+                    background-color: #ffffff;
+                    color: #000000;
+                    padding: 5px 25px;
+                    margin: 10px;
+                "
+            >
+                Add to Cart
+            </button>
+            <button
+                data-sellhub-open-cart-store-url="https://skyfall.sellhub.cx"
+                style="
+                    border-radius: 10px;
+                    background-color: #ffffff;
+                    color: #000000;
+                    padding: 5px 25px;
+                    margin: 10px;
+                "
+            >
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-top:4px;margin-bottom:4px;">
+                    <circle cx="8" cy="21" r="1"/><circle cx="19" cy="21" r="1"/>
+                    <path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"/>
+                </svg>
+            </button>
+        </div>
     </main>
 
     <!-- Modern Footer -->
@@ -141,6 +180,6 @@
     
     <!-- Other Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script type="module" src="products.js"></script>
+    <script type="module" src="products-simple.js"></script>
 </body>
 </html>
