--- a/404.html
+++ b/404.html
@@ -3,42 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found | SkyFall Gaming</title>
+    <title>Page Not Found | SkyFall</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: 'Oxanium', sans-serif;
+            background-color: #0a0a0f;
+            color: #e2e2e2;
+            background-image: 
+                radial-gradient(at 80% 0%, rgba(0, 200, 255, 0.1) 0px, transparent 50%),
+                radial-gradient(at 0% 50%, rgba(0, 150, 255, 0.1) 0px, transparent 50%);
+        }
+        .title-font {
+            font-family: 'Rajdhani', sans-serif;
+        }
+    </style>
 </head>
-<body class="bg-gray-900 text-gray-100">
-    <nav class="bg-black/80 backdrop-blur-md fixed w-full z-50">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between h-16">
-                <div class="flex items-center">
-                    <div class="flex-shrink-0">
-                        <span class="text-xl font-bold text-purple-400 title-font">SKYFALL</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-
-    <main class="min-h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8 pt-20 pb-12">
-        <div class="text-center max-w-2xl">
-            <h1 class="text-6xl md:text-8xl font-bold text-purple-400 mb-6 title-font">404</h1>
-            <h2 class="text-2xl md:text-4xl font-bold text-white mb-6">Page Not Found</h2>
-            <p class="text-lg md:text-xl text-gray-300 mb-8">
-                The page you're looking for doesn't exist or has been moved.
-            </p>
-            <a href="/" class="inline-block bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-6 rounded-lg transition-colors duration-200">
-                <i class="fas fa-arrow-left mr-2"></i> Return Home
-            </a>
-        </div>
+<body>
+    <main class="min-h-screen flex flex-col items-center justify-center px-4">
+        <h1 class="text-8xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500 title-font mb-6">404</h1>
+        <p class="text-2xl text-gray-300 mb-8">Page Not Found</p>
+        <a href="/" class="px-8 py-3 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold rounded-full transition-all duration-300 shadow-lg hover:shadow-cyan-500/30">
+            Return Home
+        </a>
     </main>
-
-    <footer class="bg-black/50 py-8">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-400 text-sm">
-            &copy; 2023 SkyFall. All rights reserved.
-        </div>
-    </footer>
 </body>
 </html>
