--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Home</a>
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Products</a>
-                    <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Features</a>
+                    <a href="https://skyfallcheats.shop/forum" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Forum</a>
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Support</a>
                     <button class="ml-6 px-6 py-2 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-medium rounded-full text-sm shadow-lg hover:shadow-cyan-500/30">
                         Dashboard
@@ -76,9 +76,11 @@
         </div>
     </section>
 
-    <!-- Product Boxes -->
+    <!-- Product Section -->
     <main class="max-w-7xl mx-auto px-6 sm:px-8 lg:px-10 py-12">
-        <div class="flex space-x-8 pb-8 pl-2 pr-2">
+        <div class="bg-gray-800/20 backdrop-blur-lg rounded-xl p-8 border border-gray-900/50 shadow-xl shadow-gray-900/20">
+            <h2 class="text-4xl font-bold text-white mb-8 text-center title-font">Fortnite</h2>
+            <div class="flex space-x-8 pb-2 pl-2 pr-2">
             <!-- Fortnite Internal -->
             <div class="product-box flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-cyan-500/30">
                 <div class="p-10">
