--- a/index-backup.html
+++ b/index-backup.html
@@ -25,6 +25,20 @@
             backdrop-filter: blur(10px);
             border-bottom: 1px solid rgba(0, 150, 255, 0.2);
         }
+        .product-box {
+            transition: all 0.3s ease;
+            transform: translateZ(0);
+        }
+        .product-box:hover {
+            transform: translateZ(0);
+            box-shadow: 0 0 25px -5px rgba(255, 255, 255, 0.7);
+            border-color: rgba(255, 255, 255, 0.8);
+            outline: 1px solid rgba(255, 255, 255, 0.8);
+            outline-offset: 2px;
+        }
+        .product-box:active {
+            box-shadow: 0 0 30px -5px rgba(59, 130, 246, 0.7);
+        }
     </style>
 </head>
 <body>
@@ -34,13 +48,13 @@
             <div class="flex items-center justify-between h-20">
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
-                        <span class="text-2xl font-bold bg-gradient-to-r from-cyan-400 to-blue-500 bg-clip-text text-transparent title-font">SKYFALL</span>
+                        <a href="https://skyfallcheats.shop/" class="text-2xl font-bold bg-gradient-to-r from-cyan-400 to-blue-500 bg-clip-text text-transparent title-font">SKYFALL</a>
                     </div>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Home</a>
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Products</a>
-                    <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Features</a>
+                    <a href="https://skyfallcheats.shop/forum" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Forum</a>
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Support</a>
                     <button class="ml-6 px-6 py-2 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-medium rounded-full text-sm shadow-lg hover:shadow-cyan-500/30">
                         Dashboard
@@ -54,7 +68,7 @@
     <section class="pt-32 pb-32 px-4 sm:px-6 lg:px-8">
         <div class="max-w-7xl mx-auto text-center">
             <h1 class="text-5xl md:text-7xl font-bold text-white mb-6 title-font">
-                <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500">SKYFALL</span> EXPERIENCE
+                <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500">SKYFALL</span> CHEATS
             </h1>
             <p class="text-xl md:text-2xl text-gray-300 max-w-3xl mx-auto mb-10">
                 Next-level gaming enhancements with military-grade encryption
@@ -62,42 +76,44 @@
         </div>
     </section>
 
-    <!-- Product Boxes -->
-    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
-        <div class="flex space-x-8 overflow-x-auto pb-4">
+    <!-- Product Section -->
+    <main class="max-w-7xl mx-auto px-6 sm:px-8 lg:px-10 py-12">
+        <div class="bg-gray-800/20 backdrop-blur-lg rounded-xl p-8 border border-gray-900/50 shadow-xl shadow-gray-900/20">
+            <h2 class="text-4xl font-bold text-white mb-8 text-center title-font">Fortnite</h2>
+            <div class="flex space-x-8 pb-2 pl-2 pr-2">
             <!-- Fortnite Internal -->
-            <div class="flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-cyan-500/30 transition-all duration-300 hover:shadow-[0_0_25px_-5px_rgba(59,130,246,0.5)] hover:border-cyan-400/60 hover:scale-[1.02] active:scale-100 active:shadow-[0_0_30px_-5px_rgba(59,130,246,0.7)]">
+            <div class="product-box flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-cyan-500/30">
                 <div class="p-10">
                     <h2 class="text-4xl font-bold text-white mb-10 text-center title-font">Fortnite Internal</h2>
                     <div class="flex flex-col space-y-6 bg-blue-900/20 p-8 rounded-xl">
                         <button
                             data-sellhub-product="3e77f619-d7e3-4e1a-9954-6fe5e688660a"
-                            class="w-full py-2 bg-white text-black rounded-lg font-medium">
-                            Buy Variant
+                            class="w-full py-3 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-cyan-500/30 flex items-center justify-center gap-2">
+                            <i class="fas fa-shopping-cart"></i> Select Product
                         </button>
                         <button
                             data-sellhub-cart-product="3e77f619-d7e3-4e1a-9954-6fe5e688660a"
-                            class="w-full py-2 bg-white text-black rounded-lg font-medium">
-                            Add to Cart
+                            class="w-full py-3 bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-600 hover:to-indigo-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-purple-500/30 flex items-center justify-center gap-2">
+                            <i class="fas fa-plus-circle"></i> Add to Cart
                         </button>
                     </div>
                 </div>
             </div>
 
             <!-- Fortnite Private -->
-            <div class="flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-cyan-500/30 transition-all duration-300 hover:shadow-[0_0_25px_-5px_rgba(59,130,246,0.5)] hover:border-cyan-400/60 hover:scale-[1.02] active:scale-100 active:shadow-[0_0_30px_-5px_rgba(59,130,246,0.7)]">
+            <div class="product-box flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-cyan-500/30">
                 <div class="p-10">
                     <h2 class="text-4xl font-bold text-white mb-10 text-center title-font">Fortnite Private</h2>
                     <div class="flex flex-col space-y-6 bg-blue-900/20 p-8 rounded-xl">
                         <button
                             data-sellhub-product="deb98a50-fc44-4f62-81c5-bdd0a3543f25"
-                            class="w-full py-2 bg-white text-black rounded-lg font-medium">
-                            Buy Variant
+                            class="w-full py-3 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-cyan-500/30 flex items-center justify-center gap-2">
+                            <i class="fas fa-shopping-cart"></i> Select Product
                         </button>
                         <button
                             data-sellhub-cart-product="deb98a50-fc44-4f62-81c5-bdd0a3543f25"
-                            class="w-full py-2 bg-white text-black rounded-lg font-medium">
-                            Add to Cart
+                            class="w-full py-3 bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-600 hover:to-indigo-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-purple-500/30 flex items-center justify-center gap-2">
+                            <i class="fas fa-plus-circle"></i> Add to Cart
                         </button>
                     </div>
                 </div>
