Add index.html 1743161234695

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Home</a>
-                    <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Products</a>
+                    <a href="https://skyfallcheats.shop/products" target="_blank" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Products</a>
                     <a href="https://skyfallcheats.shop/forum" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Forum</a>
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Support</a>
                     <button class="ml-6 px-6 py-2 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-medium rounded-full text-sm shadow-lg hover:shadow-cyan-500/30">
