--- a/products.html
+++ b/products.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products | SkyFall Cheats</title>
-    <!-- Same head content as index.html -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
+    <script type="module" src="https://public.sellhub.cx/embeds.js"></script>
     <style>
-        /* Same styles as index.html */
         body {
             font-family: 'Oxanium', sans-serif;
             background-color: #0a0a0f;
@@ -54,7 +53,7 @@
                     <a href="https://skyfallcheats.shop/products" target="_blank" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-cyan-400 text-sm font-medium">Products</a>
                     <a href="https://skyfallcheats.shop/forum" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Forum</a>
                     <a href="#" class="text-cyan-100 hover:text-white px-1 py-5 border-b-2 border-transparent hover:border-cyan-400 text-sm font-medium">Support</a>
-                    <button class="ml-6 px-6 py-2 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-medium rounded-full text-sm shadow-lg hover:shadow-cyan-500/30">
+                    <button class="ml-6 px-6 py-2 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-6 hover:to-blue-700 text-white font-medium rounded-full text-sm shadow-lg hover:shadow-cyan-500/30">
                         Dashboard
                     </button>
                 </div>
@@ -62,35 +61,43 @@
         </div>
     </nav>
 
-    <!-- Main Content - Fortnite Section -->
+    <!-- Product Section -->
     <main class="max-w-7xl mx-auto px-6 sm:px-8 lg:px-10 pt-32 pb-12">
         <div class="bg-gray-800/20 backdrop-blur-lg rounded-xl p-8 border border-gray-900/50 shadow-xl shadow-gray-900/20">
             <h2 class="text-4xl font-bold text-white mb-8 text-center title-font">Fortnite</h2>
             <div class="flex space-x-8 pb-2 pl-2 pr-2">
-                <!-- Fortnite Internal Product Box -->
+                <!-- Fortnite Internal -->
                 <div class="product-box flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-cyan-500/30">
                     <div class="p-10">
                         <h2 class="text-4xl font-bold text-white mb-10 text-center title-font">Fortnite Internal</h2>
                         <div class="flex flex-col space-y-6 bg-blue-900/20 p-8 rounded-xl">
-                            <button class="w-full py-3 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-cyan-500/30 flex items-center justify-center gap-2">
+                            <button
+                                data-sellhub-product="3e77f619-d7e3-4e1a-9954-6fe5e688660a"
+                                class="w-full py-3 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-cyan-500/30 flex items-center justify-center gap-2">
                                 <i class="fas fa-shopping-cart"></i> Select Product
                             </button>
-                            <button class="w-full py-3 bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-600 hover:to-indigo-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-purple-500/30 flex items-center justify-center gap-2">
+                            <button
+                                data-sellhub-cart-product="3e77f619-d7e3-4e1a-9954-6fe5e688660a"
+                                class="w-full py-3 bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-6 hover:to-indigo-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-purple-500/30 flex items-center justify-center gap-2">
                                 <i class="fas fa-plus-circle"></i> Add to Cart
                             </button>
                         </div>
                     </div>
                 </div>
 
-                <!-- Fortnite Private Product Box -->
+                <!-- Fortnite Private -->
                 <div class="product-box flex-shrink-0 w-full max-w-lg bg-gradient-to-b from-blue-900/30 to-blue-900/10 rounded-xl overflow-hidden border-2 border-cyan-500/30">
                     <div class="p-10">
                         <h2 class="text-4xl font-bold text-white mb-10 text-center title-font">Fortnite Private</h2>
                         <div class="flex flex-col space-y-6 bg-blue-900/20 p-8 rounded-xl">
-                            <button class="w-full py-3 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-cyan-500/30 flex items-center justify-center gap-2">
+                            <button
+                                data-sellhub-product="deb98a50-fc44-4f62-81c5-bdd0a3543f25"
+                                class="w-full py-3 bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-cyan-500/30 flex items-center justify-center gap-2">
                                 <i class="fas fa-shopping-cart"></i> Select Product
                             </button>
-                            <button class="w-full py-3 bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-600 hover:to-indigo-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-purple-500/30 flex items-center justify-center gap-2">
+                            <button
+                                data-sellhub-cart-product="deb98a50-fc44-4f62-81c5-bdd0a3543f25"
+                                class="w-full py-3 bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-6 hover:to-indigo-700 text-white font-bold rounded-lg transition-all duration-300 shadow-md hover:shadow-lg hover:shadow-purple-500/30 flex items-center justify-center gap-2">
                                 <i class="fas fa-plus-circle"></i> Add to Cart
                             </button>
                         </div>
@@ -115,5 +122,6 @@
     <!-- Scripts -->
     <script src="https://js.sellhub.io/v1/sellhub.js"></script>
     <script type="module" src="products-simple.js"></script>
+    <script src="src/particles.js"></script>
 </body>
 </html>
