--- a/index.html
+++ b/index.html
@@ -136,5 +136,6 @@
     <!-- Scripts -->
     <script src="https://js.sellhub.io/v1/sellhub.js"></script>
     <script type="module" src="products-simple.js"></script>
+    <script src="src/particles.js"></script>
 </body>
 </html>
